[tool.poetry]
name = "nb_code_formatter"
version = "0.1.1"
description = "code formatter for ipynb files"
authors = ["driller"]
repository = "https://github.com/drillan/nb-code-formatter"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
nbformat = "^5.4.0"
black = "^22.3.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nbcodefmt = "nb_code_formatter:main"
